@@ -1,0 +1,1 @@
+<html><body>Suppose you delete a few lines of code, make some further changes, then realize you want the lines of code back. While you just could copy your changes to the clipboard, undo a bunch of times, and paste, there is an easier way. Simply press <b>C+e C+y</b> which will open a dialog box listing the 20 most recently deleted runs of text.</body></html>
